--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -39,6 +39,8 @@
     <string name="please_type_age_weigh">Oops. Lütfen kilonuzu/yaşınızı giriniz</string>
     <string name="select_drink">Oops. Lütfen önce içeceğinizi seçiniz</string>
     <string name="notification_info">Su içme zamani geldi</string>
+    <string name="drink_image_button_dialog_message">İçecegi silmek ister misin?</string>
+    <string name="drunk_list_action_dialog_yes_button">EVET</string>
     <string-array name="days">
             <item>Sunday</item>
             <item>Monday</item>
@@ -94,6 +96,22 @@
             <item>2 saat</item>
             <item>3 saat</item>
         </string-array>
+    <string name="drunk_list_action_dialog_no_button">HAYIR</string>
+    <string name="history">Geçmiş</string>
+    <string name="title_history">Geçmiş</string>
+    <string name="selected_month">Selected month</string>
+    <string name="january">Ocak</string>
+    <string name="july">Temmuz</string>
+    <string name="august">Ağustos</string>
+    <string name="september">Eylül</string>
+    <string name="april">Nisan</string>
+    <string name="december">Aralık</string>
+    <string name="february">Şubat</string>
+    <string name="june">Haziran</string>
+    <string name="march">Mart</string>
+    <string name="may">Mayıs</string>
+    <string name="november">Kasım</string>
+    <string name="october">Ekim</string>
 
 
 </resources>
