migration to Room is completed except for 3 function and delete selected drink in recycler view bug is fixed

--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -90,7 +90,7 @@
     <string name="drunk_list_action_dialog_no_button">NO</string>
     <string name="history">History</string>
     <string name="title_history">History</string>
-    <string name="selected_month">Selected month</string>
+    <string name="selected_month">Mes seleccionado</string>
     <string name="january">January</string>
     <string name="july">July</string>
     <string name="august">August</string>
