history fragment is hidden and new release (1.7.2)

--- a/app/src/main/res/values-tr/strings.xml
+++ b/app/src/main/res/values-tr/strings.xml
@@ -90,7 +90,7 @@
     <string name="drunk_list_action_dialog_no_button">HAYIR</string>
     <string name="history">Geçmiş</string>
     <string name="title_history">Geçmiş</string>
-    <string name="selected_month">Secilen ay</string>
+    <string name="selected_month">Seçilen ay</string>
     <string name="january">Ocak</string>
     <string name="july">Temmuz</string>
     <string name="august">Ağustos</string>
